--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1447,7 +1447,13 @@
     grid-template-columns: repeat(2, 1fr); }
 
   .links-block .content {
-    grid-template-columns: repeat(3, 1fr); } }
+    grid-template-columns: repeat(3, 1fr); }
+
+  .rental .rental-img {
+    grid-template-columns: repeat(2, 1fr); }
+
+  .rental .title {
+    font-size: 30px; } }
 @media (max-width: 767px) {
   .content-width {
     width: 540px; }
@@ -3474,7 +3480,167 @@
     font-size: 16px; }
 
   .item-3x2 .item a .text p {
-    min-height: inherit; } }
+    min-height: inherit; }
+
+  .festival {
+    margin-top: 0 !important;
+    background: #fff; }
+
+  .festival .bg-mob .img-1 {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 1; }
+
+  .festival .bg-mob {
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    overflow: hidden; }
+
+  .festival .breadcrumb {
+    margin-bottom: 46px; }
+
+  .festival .loc {
+    margin-bottom: 11px; }
+
+  .old-event-inner .info li {
+    display: inline-block;
+    margin: 0 8px 8px 0; }
+
+  .festival .info {
+    margin-bottom: 6px; }
+
+  .festival .btn-wrap a:first-child {
+    margin-bottom: 15px; }
+
+  .festival .btn-wrap {
+    margin-bottom: 13px; }
+
+  .festival .read-more-festival {
+    font-size: 14px; }
+
+  .festival .read-more-festival img {
+    width: auto; }
+
+  .festival p {
+    margin-bottom: 12px; }
+
+  .festival .hide-block-festival {
+    -webkit-column-count: 1;
+            column-count: 1; }
+
+  .festival {
+    padding-bottom: 0 !important; }
+
+  .item-3x2-logo .item a {
+    height: 51vw; }
+
+  .item-3x2-logo .item {
+    display: block !important; }
+
+  .festival-add .btn-wrap a {
+    font-size: 12px; }
+
+  .merch .breadcrumb {
+    margin-bottom: 74px; }
+
+  .merch h1 {
+    margin-bottom: 24px; }
+
+  .merch .head-merch p {
+    font-size: 16px; }
+
+  .merch .item .text-wrap p {
+    font-size: 20px;
+    margin-bottom: 20px; }
+
+  .merch .item .text-wrap p:last-child {
+    margin-bottom: -8px; }
+
+  .merch {
+    padding-bottom: 130px; }
+
+  .rental .breadcrumb {
+    margin-bottom: 50px; }
+
+  .rental h1 {
+    margin-bottom: 30px; }
+
+  .rental .title {
+    font-size: 20px;
+    line-height: 115%;
+    margin: 30px 0 20px; }
+
+  .rental .rental-img-1 {
+    display: none; }
+
+  .table-col-2 .table-row .data-1 {
+    width: 61%; }
+
+  .table-col-2 .table-row .data-2 {
+    width: 39%; }
+
+  .table-col-2 .table-head .data {
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: 138.3%;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    padding: 9px 12px 7px;
+    text-align: left; }
+
+  .table-col-2 .data {
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 150%;
+    padding: 7px 13px; }
+
+  .rental .rental-table-wrap {
+    margin-bottom: 21px; }
+
+  .rental .btn-wrap {
+    margin-bottom: 40px; }
+
+  .rental .rental-img {
+    grid-template-columns: repeat(1, 1fr);
+    grid-gap: 20px 40px; }
+
+  .rental .rental-img .item-img a {
+    height: 51vw; }
+
+  .rental .rental-img-2 {
+    margin-bottom: 85px; }
+
+  .rental .text-info ul li {
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%; }
+
+  .rental .title-info {
+    margin-bottom: 35px; }
+
+  .merch .bg-mob {
+    overflow: hidden;
+    left: 0;
+    right: 0; }
+    .merch .bg-mob img {
+      width: 100%;
+      top: 75px;
+      position: relative; }
+
+  .form-default .input-wrap-date input {
+    width: 100%; }
+
+  .form-default .input-wrap-date img {
+    left: calc(100% - 30px);
+    top: 0; } }
 @media (max-width: 375px) {
   .about .form-wrap {
     -webkit-transform: translate(-87%, 0);
@@ -3564,68 +3730,6 @@
     margin-bottom: 5px; }
 
   .page-default footer .footer-menu ul li + li {
-    margin-top: 16px; }
-
-  .festival {
-    margin-top: 0 !important;
-    background: #fff; }
-
-  .festival .bg-mob .img-1 {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    z-index: 1; }
-
-  .festival .bg-mob {
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    overflow: hidden; }
-
-  .festival .breadcrumb {
-    margin-bottom: 46px; }
-
-  .festival .loc {
-    margin-bottom: 11px; }
-
-  .old-event-inner .info li {
-    display: inline-block;
-    margin: 0 8px 8px 0; }
-
-  .festival .info {
-    margin-bottom: 6px; }
-
-  .festival .btn-wrap a:first-child {
-    margin-bottom: 15px; }
-
-  .festival .btn-wrap {
-    margin-bottom: 13px; }
-
-  .festival .read-more-festival {
-    font-size: 14px; }
-
-  .festival .read-more-festival img {
-    width: auto; }
-
-  .festival p {
-    margin-bottom: 12px; }
-
-  .festival .hide-block-festival {
-    -webkit-column-count: 1;
-            column-count: 1; }
-
-  .festival {
-    padding-bottom: 0 !important; }
-
-  .item-3x2-logo .item a {
-    height: 51vw; }
-
-  .item-3x2-logo .item {
-    display: block !important; }
-
-  .festival-add .btn-wrap a {
-    font-size: 12px; } }
+    margin-top: 16px; } }
 
 /*# sourceMappingURL=responsive.css.map */
