--- a/css/styles.css
+++ b/css/styles.css
@@ -5206,5 +5206,185 @@ body .auto-slider-mini {
     color: #FF7900; }
 
 /*-----------------------END-PAGE-FESTIVAL------------------------*/
+/*------------------------PAGE-MERCH------------------------*/
+.merch {
+  padding-bottom: 105px; }
+  .merch .breadcrumb {
+    margin-bottom: 57px; }
+  .merch h1 {
+    margin-bottom: 29px; }
+  .merch .head-merch {
+    max-width: 960px;
+    margin: 0 auto 40px; }
+    .merch .head-merch p {
+      font-size: 18px;
+      font-weight: 400;
+      text-align: center;
+      margin-bottom: 25px; }
+      .merch .head-merch p a {
+        color: #FF7900;
+        -webkit-text-decoration-line: underline;
+                text-decoration-line: underline;
+        font-weight: 600; }
+        .merch .head-merch p a:hover {
+          color: #EB6F00; }
+    .merch .head-merch p:last-child {
+      margin-bottom: 0; }
+  .merch .item .text-wrap p {
+    font-size: 26px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 112%;
+    margin-bottom: 20px; }
+  .merch .item .text-wrap p:last-child {
+    margin-bottom: 14px; }
+  .merch .item figure .label p {
+    margin: 0 !important; }
+
+/*-----------------------END-PAGE-MERCH------------------------*/
+/*------------------------PAGE-RENTAL------------------------*/
+.rental .rental-img {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 40px 40px;
+  margin-bottom: 60px; }
+  .rental .rental-img .item-img {
+    overflow: hidden;
+    border-radius: 10px; }
+    .rental .rental-img .item-img a {
+      display: block;
+      height: 230px;
+      position: relative; }
+      .rental .rental-img .item-img a img {
+        width: 100%;
+        height: 100%;
+        -o-object-fit: cover;
+        object-fit: cover;
+        -o-object-position: center;
+        object-position: center;
+        -webkit-transition: all .4s ease;
+        transition: all .4s ease; }
+      .rental .rental-img .item-img a:hover img {
+        -webkit-transform: scale(1.03);
+                transform: scale(1.03); }
+.rental .title {
+  margin: 30px 0 45px;
+  text-align: center;
+  font-size: 36px;
+  font-style: normal;
+  font-weight: 800;
+  line-height: 106%; }
+.rental .title-info {
+  margin: 0 0 25px; }
+.rental .rental-table-wrap {
+  margin-bottom: 40px; }
+.rental .btn-wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-bottom: 60px; }
+.rental .text-info ul {
+  padding: 0 18px; }
+  .rental .text-info ul li {
+    padding-left: 10px;
+    position: relative;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%; }
+    .rental .text-info ul li:before {
+      position: absolute;
+      top: -8px;
+      left: -7px;
+      content: '.';
+      color: #000;
+      font-size: 30px; }
+.rental .rental-img-2 {
+  margin-bottom: 120px; }
+
+.table-col-2 {
+  margin: auto;
+  border-radius: 10px;
+  border: 1px solid #000;
+  width: 840px;
+  max-width: 100%; }
+  .table-col-2 .table-row {
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    border-top: 1px solid #000; }
+  .table-col-2 .table-head {
+    border-top: none; }
+  .table-col-2 .data {
+    width: 50%;
+    padding: 11px 20px;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 150%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center; }
+  .table-col-2 .data-1 {
+    border-right: 1px solid #000; }
+  .table-col-2 .table-head .data {
+    font-size: 26px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 112%;
+    text-align: center;
+    padding: 22px 25px 15px;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center; }
+
+.form-default .input-wrap-date {
+  position: relative; }
+  .form-default .input-wrap-date input {
+    width: 300px;
+    padding-right: 70px; }
+  .form-default .input-wrap-date img {
+    position: absolute;
+    left: 270px;
+    top: 5px; }
+
+.popup-default .text-info-popup {
+  margin: 25px auto 0;
+  width: 235px; }
+  .popup-default .text-info-popup p {
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%;
+    margin-bottom: 8px;
+    text-align: center; }
+    .popup-default .text-info-popup p a {
+      font-size: 18px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 150%;
+      color: #FF7900; }
+      .popup-default .text-info-popup p a:hover {
+        color: #EB6F00; }
+  .popup-default .text-info-popup p:last-child {
+    margin-bottom: 0; }
+
+.air-datepicker-global-container {
+  z-index: 999999; }
+
+.order-popup .h3 {
+  padding: 0 !important; }
+
+/*-----------------------END-PAGE-RENTAL------------------------*/
 
 /*# sourceMappingURL=styles.css.map */
