--- a/css/font.css
+++ b/css/font.css
@@ -27,6 +27,15 @@
 
 @font-face {
   font-family: 'Montserrat';
+  src: url('../fonts/Montserrat-SemiBold.woff2') format('woff2'),
+  url('../fonts/Montserrat-SemiBold.woff') format('woff');
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Montserrat';
   src: url('../fonts/Montserrat-ExtraBold.woff2') format('woff2'),
   url('../fonts/Montserrat-ExtraBold.woff') format('woff');
   font-weight: 800;
