--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -5991,3 +5991,445 @@ body .auto-slider-mini{
   padding: 0!important;
 }
 /*-----------------------END-PAGE-RENTAL------------------------*/
+/*-----------------------FORMS------------------------*/
+.popup-full{
+  width: 100%;
+  background: #fff;
+  padding: 25px 0;
+  min-height: 100%;
+  .fancybox-button{
+    display: none;
+  }
+  .title-wrap{
+    position: relative;
+    padding-bottom: 28px;
+    border-bottom: 1px solid #787878;
+    margin-bottom: 65px;
+  }
+  .close-popup{
+    position: absolute;
+    top: -14px;
+    right: -13px;
+    img{
+      transition: all .4s ease;
+    }
+    &:hover{
+      img{
+        transform: rotate(360deg);
+      }
+    }
+  }
+  .h3{
+    font-size: 26px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 112%;
+    text-align: center;
+    margin: 0!important;
+  }
+  .form-default{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+  .left{
+    width: 48%;
+  }
+  .right{
+    width: 48%;
+  }
+  .title{
+    font-size: 26px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 112%;
+    margin-bottom: 11px;
+  }
+  .form-default-big .input-wrap {
+    margin-bottom: 33px;
+  }
+  .form-default-big .input-wrap textarea{
+    height: 34px;
+  }
+  .form-default-big .input-wrap .text2, .form-default-big .input-wrap .text7{
+    height:140px;
+  }
+  .form-default-big .input-wrap .text3, .form-default-big .input-wrap .text6, .form-default-big .input-wrap .text8, .form-default-big .input-wrap .text9{
+    height:60px;
+  }
+  .form-default-big .input-wrap .text5{
+    height:85px;
+  }
+  .space{
+    height: 48px;
+  }
+  .form-default{
+    .input-submit-mt{
+      margin-top: 40px;
+      .btn-big{
+        width: 100%;
+      }
+    }
+    .input-wrap-text{
+      margin-bottom: 12px;
+    }
+    .input-wrap-check-big{
+      margin-bottom: 15px;
+      label{
+        padding-left: 50px;
+        font-size: 18px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 150%;
+      }
+      label:before{
+        width: 30px;
+        height: 30px;
+        border-width: 2px;
+        margin-top: -18px;
+      }
+    }
+  }
+  p.info{
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%;
+    margin-top: -20px;
+  }
+  .form-default .input-wrap-check-big input:checked + label:after {
+    width: 25px;
+    height: 25px;
+    position: absolute;
+    top: 50%;
+    margin-top: -15px;
+    left: 2px;
+    content: '';
+    background: url(../img/icon-46.png) no-repeat center;
+    background-size: contain;
+  }
+  .form-default .input-wrap-check-big input:checked + label:before{
+    border-color: #000;
+  }
+  .form-default .input-wrap-radio{
+    margin-bottom: 10px;
+    label{
+      font-size: 18px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 150%;
+      padding-left: 35px;
+      &:before{
+        width: 24px;
+        height: 24px;
+        box-sizing: border-box;
+        border-radius: 100%;
+        border-color:#787878;
+        margin-top: -13px;
+      }
+    }
+    input:checked + label:before{
+      border-color: #000;
+    }
+    input:checked + label:after{
+      width: 14px;
+      height: 14px;
+      border-radius: 100%;
+      background: #000;
+      margin-top: -8px;
+      left: 5px;
+    }
+
+  }
+  .info-light{
+    color: #787878;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%;
+    width: 436px;
+    max-width: 100%;
+    margin-bottom: 40px;
+  }
+
+  .total-item{
+    margin: 22px 0 0;
+    .line{
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      flex-wrap: wrap;
+      position: relative;
+      padding-right: 40px;
+      margin-bottom: 9px;
+    }
+    .del{
+      position: absolute;
+      top: 50%;
+      transform: translate(0,-50%);
+      right: 0;
+      img{
+        transition: all .4s ease;
+      }
+      &:hover{
+        img{
+          transform: rotate(360deg);
+        }
+      }
+    }
+    .name{
+      font-size: 16px;
+      font-style: normal;
+      font-weight: 800;
+      line-height: 138.3%;
+      width: 60%;
+      padding-right: 20px;
+    }
+    .price{
+      font-size: 18px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 150%;
+      width: 40%;
+    }
+    ul{
+      display: flex;
+      flex-wrap: wrap;
+      li{
+        margin: 0 12px 12px 0;
+        border-radius: 90px;
+        border: 1px solid #FF7900;
+        background: #FEF7F3;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 36px;
+        padding: 0 20px;
+      }
+    }
+  }
+  .total-line{
+    margin-top: 30px;
+    padding-top: 20px;
+    border-top: 1px solid #787878;
+    p{
+      text-align: right;
+      font-size: 20px;
+      font-style: normal;
+      font-weight: 700;
+      line-height: 115%;
+    }
+  }
+  .send-block{
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    max-height: 0;
+    transition: all .4s ease;
+    .wrap{
+      border-radius: 10px;
+      background: #505A14;
+      width: 560px;
+      padding: 40px 55px;
+      display: none;
+      .h4{
+        font-size: 36px;
+        font-style: normal;
+        font-weight: 800;
+        line-height: 106%;
+        color: #fff;
+        margin-bottom: 15px;
+      }
+      p{
+        color: #F4F3F3;
+        font-size: 18px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 150%;
+      }
+    }
+  }
+  .send-block.is-active{
+    max-height: 70vh;
+  }
+}
+
+.nice-select .option.disabled{
+  display: none!important;
+}
+
+.popup-full .h3{
+  padding: 0 50px;
+}
+.form-default .input-wrap-check input:checked + label:after{
+  margin-top: -7px;
+}
+
+.form-default .input-wrap-check-black{
+  max-width: 100%!important;
+}
+.festival-popup{
+  .info{
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%;
+    margin: 40px 0;
+    a{
+      font-weight: 700;
+      word-break: break-all;
+     &:hover{
+       color: $orangeHover;
+     }
+    }
+  }
+}
+/*----------------------END-FORMS------------------------*/
+/*----------------------PAGE-MERCH2------------------------*/
+.merch{
+  .item-merch{
+    margin-bottom: 77px;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    .img-wrap{
+      width: 48.5%;
+      display: flex;
+      flex-wrap: wrap;
+      align-content: flex-start;
+      figure{
+        width: calc(33.33% - 14px);
+        margin-right: 20px;
+        height: 124px;
+        border-radius: 10px;
+        overflow: hidden;
+        position: relative;
+        .label{
+          position: absolute;
+          top: 15px;
+          left: 15px;
+          display: inline-block;
+          border-radius: 90px;
+          background: #F4F3F3;
+          font-size: 14px;
+          font-style: normal;
+          font-weight: 400;
+          line-height: 30px;
+          padding: 0 16px;
+          z-index: 10;
+        }
+        img{
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+          object-position: center;
+          transition: all .4s ease;
+        }
+        &:hover{
+          img{
+            transform: scale(1.03);
+          }
+        }
+      }
+      figure:last-child{
+        margin-right: 0;
+      }
+      .big{
+        margin: 0 0 20px;
+        height: 358px;
+        width: 100%;
+      }
+    }
+  }
+  .text-wrap{
+    width: 48.2%;
+    .title{
+      font-size: 36px;
+      font-style: normal;
+      font-weight: 800;
+      line-height: 106%;
+      margin-bottom: 20px;
+    }
+    p{
+      margin-bottom: 15px;
+      b{
+        font-weight: 700;
+      }
+      a{
+        color: $orange;
+        font-weight: 600;
+        text-decoration: underline;
+        &:hover{
+          color: $orangeHover;
+        }
+      }
+    }
+    .price{
+      font-size: 26px;
+      font-style: normal;
+      font-weight: 700;
+      line-height: 112%;
+      margin-bottom: 20px;
+    }
+    ul{
+      margin: -15px 0 20px;
+      padding-left: 17px;
+      li{
+        position: relative;
+        padding-left: 10px;
+        b{
+          font-weight: 700;
+        }
+        &:before{
+          position: absolute;
+          top: 11px;
+          width: 4px;
+          height: 4px;
+          border-radius: 100%;
+          background: #000;
+          left: -6px;
+          content: '';
+          font-size: 30px;
+          color: #000;
+        }
+      }
+    }
+  }
+}
+.merch .item-merch:last-child{
+  margin-bottom: 30px;
+}
+
+.form-default .input-wrap-check + .input-wrap-check{
+  margin-top: -20px;
+}
+.form-default .input-wrap-check-black + .input-wrap-check-black{
+  margin-top: 0;
+}
+
+.form-default  .input-wrap-radio + .input-wrap-radio{
+  margin-top: 0;
+}
+.popup-full .center{
+  width: 560px;
+}
+.popup-full .form-default.content-center{
+  justify-content: center;
+}
+.popup-full p.info.mtb{
+  margin: 0 0 40px;
+}
+/*---------------------END-PAGE-MERCH2------------------------*/
+.event .bottom{
+  a + a{
+    margin-left: 25px;
+  }
+}
+
+.event .btn-wrap{
+  a + a{
+    margin-left: 15px;
+  }
+}
